# Index-of-Destiny

./: .env.example  .gitignore  Cargo.toml  README.md
src/: lottery.rs  main.rs  twse_client.rs
