[package]
name = "index-of-destiny"
version = "1.0.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
reqwest = { version = "0.12.15", features = ["json"] }
tokio = { version = "1.44.2", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
rand = "0.8"
rand_chacha = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
